#6997 button z-index issue

--- a/public/less/ssb-site-builder/ssb-components/ssb-form-donate.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-donate.less
@@ -11,6 +11,10 @@
         vertical-align: top;
     }
 
+    a.btn-facebook, a.btn-twitter{
+        z-index: 2;
+    }
+
     .fa-facebook{
         background: white;
         color: #2d4373;
@@ -23,6 +27,9 @@
     .btn-form
     {
         white-space: inherit;
+    }
+    .btn-form{
+        z-index: 2 !important;
     }
 }
 /**
